--- a/index.html
+++ b/index.html
@@ -1,14 +1,49 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
+
     <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>My site</title>
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-        <!--<link rel="stylesheet" type="text/css" media="screen" href="main.css" />-->
-        <!--<script src="main.js"></script>-->
+        <title>Home</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
+
     <body>
-        <h1>HELLLOOOOOO WOOOORRRRLLLLD!!!!!!!</h1>
+
+        <div>
+            <header class="clearfix">
+                <h1 class="name">Allen Emejuobi</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+
+            </header>
+        </div>
+
+        <div id="container">
+            
+            <h1 id="aboutMe" class="contentHead">About Me</h1>
+
+            <div class="content">
+
+                <img src="assets/images/allen.jpg" alt="allen" id="allen">
+                
+                <p>Hello world! As you can very well see (hopefully), my name is Allen Emejuobi. If you can't pronounce the last name, it is because it is of Nigerian descent. However, I was born and raised in Kansas City. Nevertheless, I still claim my heritage and rep my country! Anyway, my journey into the tech world started at a young age, but I never thought I would pursue a career in the Software Engineering field. A good friend of mine kind of got me into the idea of coding, so I did what every other beginner would do and started on Codecademy. I got hooked after that and have been teaching myself ever since then. Fast forward a few years, and I haven't made much progress. I found out about coding bootcamps through random research online and started digging into it, and here I am now at KU's coding bootcamp. The goal is to gain skills that will bring me financial freedom while enjoying what I do and traveling the world.</p>
+
+                <p>I have a wide range of interests and things I would like to do in life. My first passion was, and still is, cars. Not so much of working on them anymore, but driving nice and fast cars. I made a promise to myself that once I get a nice paying career, I would reward myself with a 2017 Mercedes C63s Amg Coupe. That will be the proof that all the struggles over the years weren't for nothing. However, the biggest reward will be seeing the joy in my mother and knowing that I did have made her proud after all the sacrifices she made for her children.</p>
+
+                <p>This is the beginning of a new stage in my life, and I plan to squeeze as much opportunity as I can out of it.</p>
+
+            </div>
+
+        </div>
+
+        <footer>&copy Allen Emejuobi 2018</footer>
     </body>
+
+
+<script src="assets/js/script.js"></script>
 </html>
