--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- <h4>My name is Allen Emejuobi</h4> -->
 
             <div id="summary">
-                <p>My name is Allen Emejuobi. My journey into the tech world started at a young age, but I never thought I would pursue a career in the Software Engineering field. My interests are in mobile applications, web applications, and the internet of things. With that in mind, my goal is to gain skills that will put me in a job in Software Engineering as a Back-End Developer dealing with IoT.</p>
+                <p class="clearfix">My name is Allen Emejuobi. My journey into the tech world started at a young age, but I never thought I would pursue a career in the Software Engineering field. My interests are in mobile applications, web applications, and the internet of things. With that in mind, my goal is to gain skills that will put me in a job in Software Engineering as a Back-End Developer dealing with IoT.</p>
             </div>
         </div>
 
