--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header class="clearfix">
-            <h1 id="siteTitle">My Site</h1>
+            <h1 id="siteTitle">Allen Emejuobi</h1>
             <div id="navBox">
                 <nav>
                     <ul>
