--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,11 @@
                     <a href="https://shannonmh.github.io/Be-Your-Own-Bartender/"><p>BYOB</p>
                     </a>
                 </div>
+                
+                <div class="projectBox" id="box6">
+                    <a href="https://github.com/aemejuobi/Bamazon"><p>Bamazon</p>
+                    </a>
+                </div>
             
             </div>
         </div>
