--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,13 @@
                     </a>
                 </div>
                 
-                <div class="projectBox" id="box6">
+                <div class="projectBox" id="box7">
                     <a href="https://github.com/aemejuobi/Bamazon"><p>Bamazon</p>
+                    </a>
+                </div>
+
+                <div class="projectBox" id="box8">
+                    <a href="https://desolate-retreat-71927.herokuapp.com/"><p>Sub Scrub</p>
                     </a>
                 </div>
             
