--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,11 @@
                     <a href="https://desolate-retreat-71927.herokuapp.com/"><p>Sub Scrub</p>
                     </a>
                 </div>
+
+                <div class="projectBox" id="box8">
+                    <a href="https://github.com/aemejuobi/Click-Game"><p>Clicky Game</p>
+                    </a>
+                </div>
             
             </div>
         </div>
