--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,11 @@
                     <a href="https://github.com/aemejuobi/Click-Game"><p>Clicky Game</p>
                     </a>
                 </div>
+
+                <div class="projectBox" id="box8">
+                    <a href="https://google-book-searcher.herokuapp.com/"><p>Google Book Search</p>
+                    </a>
+                </div>
             
             </div>
         </div>
