--- a/contact.html
+++ b/contact.html
@@ -41,5 +41,14 @@
                     <a href="https://github.com/aemejuobi" target="_blank"><i class="fab fa-github fa-3x"></i></a>
                 </section>
             </div>
+
+            <!-- <footer class="footer">
+                <div class="footer-content">
+                    <p> &copy; Allen Emejuobi 2020</p>
+                    <a href="https://www.linkedin.com/in/aemejuobi" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.instagram.com/symbah09" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://github.com/aemejuobi" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+                </div> 
+            </footer> -->
     </body>
 </html>
