--- a/index.html
+++ b/index.html
@@ -34,5 +34,13 @@
 
         <!-- About -->
 
+        <!-- <footer class="footer">
+            <div class="footer-content">
+                <p> &copy; Allen Emejuobi 2020</p>
+                <a href="https://www.linkedin.com/in/aemejuobi" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                <a href="https://www.instagram.com/symbah09" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://github.com/aemejuobi" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            </div> 
+        </footer> -->
     </body>
 </html>
