--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html" class="current">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <!-- <li><a href="contact.html">Contact</a></li> -->
             </ul>
         </nav>
 
@@ -140,14 +140,24 @@
             
         </div>
 
-        <!-- <footer class="footer">
+        <footer class="footer">
             <div class="footer-content">
-                <p> &copy; Allen Emejuobi 2020</p>
-                <a href="https://www.linkedin.com/in/aemejuobi" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                <a href="https://www.instagram.com/symbah09" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="https://github.com/aemejuobi" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+
+                <!-- <div class="contact-info"> -->
+                    <p> &copy; Allen Emejuobi 2020</p>
+
+                    <a href="mailto:govallen@gmail.com">govallen@gmail.com</a>
+
+                    <div class="social-media">
+                        <a href="https://www.linkedin.com/in/aemejuobi" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+
+                        <a href="https://www.instagram.com/symbah09" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+
+                        <a href="https://github.com/aemejuobi" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+                    </div>
+                <!-- </div> -->
             </div> 
-        </footer> -->
+        </footer>
     </body>
 </html>
 
