--- a/projects.html
+++ b/projects.html
@@ -138,6 +138,18 @@
                 </div>
             </div>
             
+            <div class="card card-9">
+                <div class="card-overlay">
+                    <div class="card-description">
+                        <a href="https://aemejuobi.github.io/Timer-App/" target="_blank">
+                            <h3 class="project-title">
+                                Timer App
+                            </h3>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
         </div>
 
         <footer class="footer">
