--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="My personal website that displays personal projects">
+        <meta name="keywords" content="website, projects, web development, application development, web application, developer">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
