Optimized website for better performance

--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
             <div class="card card-6">
                 <div class="card-overlay">
                     <div class="card-description">
-                        <a href="https://shannonmh.github.io/Be-Your-Own-Bartender/" target="_blank">
+                        <a href="https://shannonmh.github.io/Be-Your-Own-Bartender/" target="_blank" rel="noreferrer">
                             <h3 class="project-title">
                                 Be-Your-Own-Bartender
                             </h3>
@@ -108,7 +108,7 @@
             <div class="card card-7">
                 <div class="card-overlay">
                     <div class="card-description">
-                        <a href="https://nameless-reef-59019.herokuapp.com/" target="_blank">
+                        <a href="https://nameless-reef-59019.herokuapp.com/" target="_blank" rel="noreferrer">
                             <h3 class="project-title">
                                 Clicky Game
                             </h3>
@@ -120,7 +120,7 @@
             <div class="card card-8">
                 <div class="card-overlay">
                     <div class="card-description">
-                        <a href="https://google-book-searcher.herokuapp.com/" target="_blank">
+                        <a href="https://google-book-searcher.herokuapp.com/" target="_blank" rel="noreferrer">
                             <h3 class="project-title">
                                 Google Book Search
                             </h3>
@@ -132,7 +132,7 @@
             <div class="card card-9">
                 <div class="card-overlay">
                     <div class="card-description">
-                        <a href="https://igbowomenkc.com/" target="_blank">
+                        <a href="https://igbowomenkc.com/" target="_blank" rel="noreferrer">
                             <h3 class="project-title">
                                 IWAKC
                             </h3>
@@ -166,9 +166,9 @@
                     <div class="social-media">
                         <a href="https://www.linkedin.com/in/aemejuobi" target="_blank" rel="noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
 
-                        <a href="https://www.instagram.com/symbah09" target="_blank" rel="referrer"><i class="fab fa-instagram fa-2x"></i></a>
+                        <a href="https://www.instagram.com/symbah09" target="_blank" rel="noreferrer"><i class="fab fa-instagram fa-2x"></i></a>
 
-                        <a href="https://github.com/aemejuobi" target="_blank" rel="referrer"><i class="fab fa-github fa-2x"></i></a>
+                        <a href="https://github.com/aemejuobi" target="_blank" rel="noreferrer"><i class="fab fa-github fa-2x"></i></a>
                     </div>
                 <!-- </div> -->
             </div> 
