Added alt text for accessibility

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Navigation -->
         <nav id="navbar">
             <div class="home-logo">
-                <a href="index.html"><i class="fas fa-home fa-2x"></i></a>
+                <a href="index.html"><i class="fas fa-home fa-2x" alt="home"></i></a>
             </div>
 
             <ul>
@@ -43,14 +43,14 @@
                 <!-- <div class="contact-info"> -->
                     <p> &copy; Allen Emejuobi 2020</p>
 
-                    <a href="mailto:govallen@gmail.com">govallen@gmail.com</a>
+                    <a href="mailto:govallen@gmail.com" alt="email">govallen@gmail.com</a>
 
                     <div class="social-media">
-                        <a href="https://www.linkedin.com/in/aemejuobi" target="_blank" rel="noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
+                        <a href="https://www.linkedin.com/in/aemejuobi" target="_blank" rel="noreferrer" alt="linkedin"><i class="fab fa-linkedin fa-2x"></i></a>
 
-                        <a href="https://www.instagram.com/symbah09" target="_blank" rel="noreferrer"><i class="fab fa-instagram fa-2x"></i></a>
+                        <a href="https://www.instagram.com/symbah09" target="_blank" rel="noreferrer" alt="instagram"><i class="fab fa-instagram fa-2x"></i></a>
 
-                        <a href="https://github.com/aemejuobi" target="_blank" rel="noreferrer"><i class="fab fa-github fa-2x"></i></a>
+                        <a href="https://github.com/aemejuobi" target="_blank" rel="noreferrer" alt="github"><i class="fab fa-github fa-2x"></i></a>
                     </div>
                 <!-- </div> -->
             </div> 
