--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="projects, web development, application development, web application, developer">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
+        <!-- <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css"> -->
         <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/mobile.css">
     </head>
     <body id="project">
