--- a/projects.html
+++ b/projects.html
@@ -152,6 +152,18 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card card-11">
+                <div class="card-overlay">
+                    <div class="card-description">
+                        <a href="https://aemejuobi.github.io/Movie-Battle/" target="_blank">
+                            <h3 class="project-title">
+                                Movie Battle
+                            </h3>
+                        </a>
+                    </div>
+                </div>
+            </div>
             
         </div>
 
